<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="channel_name">Download status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_file_name">Glide - Image Loading Library by BumpTech</string>
    <string name="app_file_name">Load App - Current repository by Udacity</string>
    <string name="retrofit_file_name">Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc</string>

    <string name="radio_glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_app_text">Load App - Current repository by Udacity</string>
    <string name="radio_retrofit_text">Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc</string>
    <string name="radio_group_unchecked_toast_text">Please select the file to download</string>

    <string name="cloud_image_description">Download cloud image</string>

    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="app_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="file_name_value">File name</string>
    <string name="status_label">Status</string>
    <string name="ok_button">ok</string>
    <string name="swipe_hint">Drag down to see animation</string>
</resources>
